bindings/c/include/wickra.h

typedef struct PolarizedFractalEfficiency PolarizedFractalEfficiency;
typedef struct Ppo Ppo;
typedef struct PpoHistogram PpoHistogram;
typedef struct ProfitFactor ProfitFactor;
typedef struct RSquared RSquared;
typedef struct RealizedVolatility RealizedVolatility;
typedef struct RecoveryFactor RecoveryFactor;
typedef struct Reflex Reflex;
typedef struct RegimeLabel RegimeLabel;
typedef struct RenkoTrailingStop RenkoTrailingStop;
typedef struct Rmi Rmi;
typedef struct Roc Roc;
typedef struct Rocp Rocp;
typedef struct Rocr Rocr;
typedef struct Rocr100 Rocr100;
typedef struct RollingIqr RollingIqr;
typedef struct RollingMinMaxScaler RollingMinMaxScaler;
typedef struct RollingPercentileRank RollingPercentileRank;
typedef struct RollingQuantile RollingQuantile;
void wickra_polarized_fractal_efficiency_free(struct PolarizedFractalEfficiency *handle);
struct Ppo *wickra_ppo_new(uintptr_t fast, uintptr_t slow);
double wickra_ppo_update(struct Ppo *handle, double value);
void wickra_ppo_batch(struct Ppo *handle, const double *input, double *out, uintptr_t n);
void wickra_ppo_reset(struct Ppo *handle);
void wickra_ppo_free(struct Ppo *handle);
struct PpoHistogram *wickra_ppo_histogram_new(uintptr_t fast, uintptr_t slow, uintptr_t signal);
double wickra_ppo_histogram_update(struct PpoHistogram *handle, double value);
void wickra_ppo_histogram_batch(struct PpoHistogram *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_ppo_histogram_reset(struct PpoHistogram *handle);
void wickra_ppo_histogram_free(struct PpoHistogram *handle);
struct ProfitFactor *wickra_profit_factor_new(uintptr_t period);
double wickra_profit_factor_update(struct ProfitFactor *handle, double value);
void wickra_profit_factor_batch(struct ProfitFactor *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_profit_factor_reset(struct ProfitFactor *handle);
void wickra_profit_factor_free(struct ProfitFactor *handle);
struct RSquared *wickra_r_squared_new(uintptr_t period);
double wickra_r_squared_update(struct RSquared *handle, double value);
void wickra_r_squared_batch(struct RSquared *handle, const double *input, double *out, uintptr_t n);
void wickra_r_squared_reset(struct RSquared *handle);
void wickra_r_squared_free(struct RSquared *handle);
struct RealizedVolatility *wickra_realized_volatility_new(uintptr_t period);
double wickra_realized_volatility_update(struct RealizedVolatility *handle, double value);
void wickra_realized_volatility_batch(struct RealizedVolatility *handle,
                                      const double *input,
                                      double *out,
                                      uintptr_t n);
void wickra_realized_volatility_reset(struct RealizedVolatility *handle);
void wickra_realized_volatility_free(struct RealizedVolatility *handle);
struct RecoveryFactor *wickra_recovery_factor_new(void);
double wickra_recovery_factor_update(struct RecoveryFactor *handle, double value);
void wickra_recovery_factor_batch(struct RecoveryFactor *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_recovery_factor_reset(struct RecoveryFactor *handle);
void wickra_recovery_factor_free(struct RecoveryFactor *handle);
struct Reflex *wickra_reflex_new(uintptr_t period);
double wickra_reflex_update(struct Reflex *handle, double value);
void wickra_reflex_batch(struct Reflex *handle, const double *input, double *out, uintptr_t n);
void wickra_reflex_reset(struct Reflex *handle);
void wickra_reflex_free(struct Reflex *handle);
struct RegimeLabel *wickra_regime_label_new(uintptr_t vol_period, uintptr_t lookback);
double wickra_regime_label_update(struct RegimeLabel *handle, double value);
void wickra_regime_label_batch(struct RegimeLabel *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_regime_label_reset(struct RegimeLabel *handle);
void wickra_regime_label_free(struct RegimeLabel *handle);
struct RenkoTrailingStop *wickra_renko_trailing_stop_new(double block_size);
double wickra_renko_trailing_stop_update(struct RenkoTrailingStop *handle, double value);
void wickra_renko_trailing_stop_batch(struct RenkoTrailingStop *handle,
                                      const double *input,
                                      double *out,
                                      uintptr_t n);
void wickra_renko_trailing_stop_reset(struct RenkoTrailingStop *handle);
void wickra_renko_trailing_stop_free(struct RenkoTrailingStop *handle);
struct Rmi *wickra_rmi_new(uintptr_t period, uintptr_t momentum);
double wickra_rmi_update(struct Rmi *handle, double value);
void wickra_rmi_batch(struct Rmi *handle, const double *input, double *out, uintptr_t n);
void wickra_rmi_reset(struct Rmi *handle);
void wickra_rmi_free(struct Rmi *handle);
struct Roc *wickra_roc_new(uintptr_t period);
double wickra_roc_update(struct Roc *handle, double value);
void wickra_roc_batch(struct Roc *handle, const double *input, double *out, uintptr_t n);
void wickra_roc_reset(struct Roc *handle);
void wickra_roc_free(struct Roc *handle);
struct Rocp *wickra_rocp_new(uintptr_t period);
double wickra_rocp_update(struct Rocp *handle, double value);
void wickra_rocp_batch(struct Rocp *handle, const double *input, double *out, uintptr_t n);
void wickra_rocp_reset(struct Rocp *handle);
void wickra_rocp_free(struct Rocp *handle);
struct Rocr *wickra_rocr_new(uintptr_t period);
double wickra_rocr_update(struct Rocr *handle, double value);
void wickra_rocr_batch(struct Rocr *handle, const double *input, double *out, uintptr_t n);
void wickra_rocr_reset(struct Rocr *handle);
void wickra_rocr_free(struct Rocr *handle);
struct Rocr100 *wickra_rocr100_new(uintptr_t period);
double wickra_rocr100_update(struct Rocr100 *handle, double value);
void wickra_rocr100_batch(struct Rocr100 *handle, const double *input, double *out, uintptr_t n);
void wickra_rocr100_reset(struct Rocr100 *handle);
void wickra_rocr100_free(struct Rocr100 *handle);
struct RollingIqr *wickra_rolling_iqr_new(uintptr_t period);
double wickra_rolling_iqr_update(struct RollingIqr *handle, double value);
void wickra_rolling_iqr_batch(struct RollingIqr *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_rolling_iqr_reset(struct RollingIqr *handle);
void wickra_rolling_iqr_free(struct RollingIqr *handle);
struct RollingMinMaxScaler *wickra_rolling_min_max_scaler_new(uintptr_t period);
double wickra_rolling_min_max_scaler_update(struct RollingMinMaxScaler *handle, double value);
void wickra_rolling_min_max_scaler_batch(struct RollingMinMaxScaler *handle,
                                         const double *input,
                                         double *out,
                                         uintptr_t n);
void wickra_rolling_min_max_scaler_reset(struct RollingMinMaxScaler *handle);
void wickra_rolling_min_max_scaler_free(struct RollingMinMaxScaler *handle);
struct RollingPercentileRank *wickra_rolling_percentile_rank_new(uintptr_t period);
double wickra_rolling_percentile_rank_update(struct RollingPercentileRank *handle, double value);
void wickra_rolling_percentile_rank_batch(struct RollingPercentileRank *handle,
                                          const double *input,
                                          double *out,
                                          uintptr_t n);
void wickra_rolling_percentile_rank_reset(struct RollingPercentileRank *handle);
void wickra_rolling_percentile_rank_free(struct RollingPercentileRank *handle);
struct RollingQuantile *wickra_rolling_quantile_new(uintptr_t period, double quantile);
double wickra_rolling_quantile_update(struct RollingQuantile *handle, double value);
void wickra_rolling_quantile_batch(struct RollingQuantile *handle,
                                   const double *input,
                                   double *out,
                                   uintptr_t n);
void wickra_rolling_quantile_reset(struct RollingQuantile *handle);