bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_polarized_fractal_efficiency_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ppo_new(nuint fast, nuint slow);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ppo_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ppo_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ppo_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ppo_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ppo_histogram_new(nuint fast, nuint slow, nuint signal);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ppo_histogram_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ppo_histogram_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ppo_histogram_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ppo_histogram_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_profit_factor_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_profit_factor_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_profit_factor_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_profit_factor_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_profit_factor_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_r_squared_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_r_squared_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_r_squared_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_r_squared_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_r_squared_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_realized_volatility_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_realized_volatility_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_realized_volatility_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_realized_volatility_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_realized_volatility_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_recovery_factor_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_recovery_factor_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_recovery_factor_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_recovery_factor_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_recovery_factor_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_reflex_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_reflex_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_reflex_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_reflex_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_reflex_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_regime_label_new(nuint volPeriod, nuint lookback);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_regime_label_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_regime_label_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_regime_label_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_regime_label_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_renko_trailing_stop_new(double blockSize);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_renko_trailing_stop_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_renko_trailing_stop_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_renko_trailing_stop_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_renko_trailing_stop_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rmi_new(nuint period, nuint momentum);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rmi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rmi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rmi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rmi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_roc_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_roc_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_roc_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_roc_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_roc_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rocp_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rocp_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rocp_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rocp_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rocp_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rocr_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rocr_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rocr_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rocr_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rocr_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rocr100_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rocr100_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rocr100_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rocr100_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rocr100_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rolling_iqr_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rolling_iqr_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rolling_iqr_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_iqr_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_iqr_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rolling_min_max_scaler_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rolling_min_max_scaler_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rolling_min_max_scaler_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_min_max_scaler_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_min_max_scaler_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rolling_percentile_rank_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rolling_percentile_rank_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rolling_percentile_rank_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_percentile_rank_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_percentile_rank_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_rolling_quantile_new(nuint period, double quantile);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_rolling_quantile_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_rolling_quantile_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_rolling_quantile_reset(nint handle);
